--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "lint:js": "eslint .",
     "lint:css": "stylelint blocks/**/*.css styles/*.css",
-    "lint": "npm run lint:js && npm run lint:css"
+    "lint": "npm run lint:js && npm run lint:css",
+    "fix:lint:js": "eslint \"blocks/**/*.{js,json}\" --fix --no-error-on-unmatched-pattern",
+    "fix:lint:css": "stylelint --fix \"blocks/**/*.css\"",
+    "fix:format": "prettier \"blocks/**/*.{css,js,json}\" --write",
+    "fix:lint": "npm run fix:lint:js && npm run fix:lint:css && npm run fix:format"
   },
   "repository": {
     "type": "git",
@@ -19,13 +23,17 @@
   },
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "7.24.4",
-    "@babel/eslint-parser": "7.24.1",
+    "@babel/core": "7.24.0",
+    "@babel/eslint-parser": "7.23.10",
     "chai": "5.1.0",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
-    "stylelint": "16.3.1",
+    "stylelint": "16.2.1",
     "stylelint-config-standard": "36.0.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "prettier": "^3.2.5"
   }
 }
